Added link to abstract to current bio

--- a/_posts/2015-03-24-bio.md
+++ b/_posts/2015-03-24-bio.md
@@ -2,7 +2,7 @@
 layout: post
 ---
 
-I am a recent history Ph.D. and [web developer](http://foamgarden.com) living in Columbus, OH.
+I am a recent [history Ph.D.](http://tinaja.computer/2014/10/28/abstract-making-the-ocean.html) and [web developer](http://foamgarden.com) living in Columbus, OH.
 
 I am a co-founder and publisher of the digital history journal, [_The Appendix_](http://theappendix.net).
 
